--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,40 @@
-:root {
+
+.task-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5em;
+  border-bottom: 1px solid #ccc;
+}
+.task-item button {
+  background-color: #ff0000;
+  color: #fff;
+  border: none;
+  padding: 0.5em;
+  cursor: pointer;
+}.footer a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.sidebar {
+    background-color: #f4f4f4;
+    padding: 1em;
+    width: 200px;
+  }
+  .sidebar ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  .sidebar ul li {
+    margin: 1em 0;
+  }
+  .sidebar ul li a {
+    text-decoration: none;
+    color: #333;
+  }.task-list {
+  margin: 2em;
+}:root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
