--- a/src/index.css
+++ b/src/index.css
@@ -1,63 +1,4 @@
 
-.task-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.5em;
-  border-bottom: 1px solid #ccc;
-}
-.task-item button {
-  background-color: #ff0000;
-  color: #fff;
-  border: none;
-  padding: 0.5em;
-  cursor: pointer;
-}.footer a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.sidebar {
-    background-color: #f4f4f4;
-    padding: 1em;
-    width: 200px;
-  }
-  .sidebar ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  .sidebar ul li {
-    margin: 1em 0;
-  }
-  .sidebar ul li a {
-    text-decoration: none;
-    color: #333;
-  }.task-list {
-  margin: 2em;
-}:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
@@ -69,37 +10,34 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  color: white;
+  color: rgb(170, 33, 33);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+
+
+.navbar {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  background-color: #0a47c0;
+  color: rgb(223, 21, 21);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.navbar-logo {
+  width: 40px;
+  height: 40px;
+  background-image: url(./assets/Hamburger.jpg);
+  background-size: cover; 
+  background-position: center;
+  margin-right: 0.5rem;
+}
+
+.hamburger-icon {
+  width: 40px;
+  height: 40px;
+  background-image: url(./assets/pencil.jpeg);
+  background-size: cover;
+  background-position: center;
+  margin-left: auto; 
 }
