--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-
-
 .task-item {
   display: flex;
   justify-content: space-between;
@@ -13,39 +11,38 @@
   border: none;
   padding: 0.5em;
   cursor: pointer;
-}.footer a {
+}
+.footer {
+  height: 10vh;
+}
+
+.footer a {
   color: #fff;
   text-decoration: none;
 }
 
+#main {
+  background-color: #8b3333;
+  width: 90vh;
+  height: 82vh;
+}
+
 .sidebar {
-    background-color: #f4f4f4;
-    padding: 1em;
-    width: 200px;
-  }
-  .sidebar ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  .sidebar ul li {
-    margin: 1em 0;
-  }
-  .sidebar ul li a {
-    text-decoration: none;
-    color: #333;
-  }.task-list {
+  background-color: #36f97a;
+  height: 82vh;
+  width: 200px;
+}
+.sidebar ul {
+  list-style-type: none;
+  padding: 0;
+}
+.sidebar ul li {
+  margin: 1em 0;
+}
+.sidebar ul li a {
+  text-decoration: none;
+  color: #333;
+}
+.task-list {
   margin: 2em;
-}
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
